# did-webs-resolver

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.md  codecov.yaml  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml  setup.py
.github/workflows/: main.yml
docker/: controller-init.sh  resolver-init.sh  test-resolutions.sh
docker/artifacts/EEMVke69ZjQAXoK3FTLtCwpyWOXx5qkhzIDqXAgYfPgh/: did.json  keri.cesr
docker/scripts/: designated_aliases.json  get_started.sh
docker/scripts/example-acdc-and-data/: desig-aliases-attr-public.json  desig-aliases-public.json
docker/tmp/: simple_webs_resolve.sh
docs/: commands.md  did-webs.md  getting_started.md  troubleshooting.md
images/: did-keri-resolver-service.dockerfile  did-webs-resolver-service.dockerfile  did-webs-service.dockerfile  dws-base.dockerfile  dws-dynamic-service.dockerfile  dws-resolver-service.dockerfile  dws-static-service.dockerfile  dws-web-service.dockerfile  webs.dockerfile
local/: did_webs_workflow.sh
local-config/keri/cf/: hyperledger.json
local-scripts/: aid-setup-and-doc-gen.sh  did_webs_workflow.sh
local/config/controller/keri/cf/: dws-other.json
src/dkr/: __init__.py
src/dkr/app/: logs.py
src/dkr/app/cli/: dkr.py
src/dkr/app/cli/commands/: version.py
src/dkr/app/cli/commands/did/keri/: resolve.py  resolver-service.py
src/dkr/app/cli/commands/did/webs/: generate.py  resolve.py  resolver-service.py  service.py
src/dkr/core/: __init__.py  artifacting.py  didding.py  didkeri.py  generating.py  habs.py  requesting.py  resolving.py  webbing.py
src/dkr/core/ends/: __init__.py  did_webs_resource_end.py  keri_cesr_resource_end.py
src/dkr/didcomm/: hello-world.py  utils.py
src/dws/: __init__.py
src/dws/app/cli/: dws.py
src/dws/core/: artifacting.py  didding.py  didkeri.py  habs.py  oobiing.py  requesting.py  resolving.py  schemaing.py
src/dws/resources/: __init__.py
tests/: conftest.py  keri_api.py  test_dkr.py
tests/dkr/app/: test_logs.py
tests/dkr/app/cli/commands/did/webs/: test_resolve.py
tests/dkr/core/: common.py  test_artifacting.py  test_clienting.py  test_didding.py  test_generating.py  test_habs.py  test_requesting.py  test_resolving.py  test_webbing.py
tests/dkr/core/ends/: test_did_webs_resource_end.py  test_keri_cesr_resource_end.py
tests/dws/core/: test_clienting.py  test_didding.py  test_generating.py  test_habs.py  test_requesting.py  test_resolving.py
tests/dws/core/ends/: test_keri_cesr_resource_end.py
volume/dkr/examples/ENro7uf0ePmiK3jdTo2YCdXLqW7z7xoP6qhhBou6gBLe/: keri.cesr
volume/local/: setup.sh
volume/local/config/keri/cf/: local.json
