[project]
name = "dkr"
version = "0.2.5" # also change in src/dkr/__init__.py
description = "did:webs DID Method Resolver"
readme = "README.md"
requires-python = "==3.12.6"
license = {text = "Apache Software License 2.0"}
authors = [
    {name = "Philip S. Feairheller", email = "pfeairheller@gmail.com"}
]
keywords = ["did:webs", "did", "resolver", "webs", "keri", "acdc", "cesr", "vlei"]

dependencies = [
    "keri==1.2.6",
    "multicommand>=1.0.0",
    "falcon>=3.1.3",
    "requests>=2.28",
    "viking>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Documentation" = "https://kara.readthedocs.io/"
"Changelog" = "https://kara.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/WebOfTrust/kara/issues"

[project.scripts]
dkr = "dkr.app.cli.dkr:main"

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "mockito>=1.5.4",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.uv.sources]
viking = { git = "https://github.com/GLEIF-IT/viking" }
