[project]
name = "did-webs-resolver"
version = "0.3.4" # also change in src/dws/__init__.py and Makefile
description = "did:webs DID Method Resolver"
readme = "README.md"
requires-python = ">=3.12.6,<3.14.3"
license = {text = "Apache Software License 2.0"}
authors = [
    {name = "Philip S. Feairheller", email = "pfeairheller@gmail.com"},
    {name = "Kent Bull", email = "kent@kentbull.com"}
]
keywords = ["did:webs", "did", "resolver", "webs", "keri", "acdc", "cesr", "vlei"]

dependencies = [
    "keri>=1.2.12,<1.3",
    "multicommand>=1.0.0",
    "falcon>=3.1.3",
    "requests>=2.32.5",
    "vgate>=0.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [ "src/dws" ]
sources = [ "src" ]

[project.urls]
"Documentation" = "https://github.com/GLEIF-IT/did-webs-resolver/docs"
"Changelog" = "https://github.com/GLEIF-IT/did-webs-resolver/CHANGELOG.md"
"Issue Tracker" = "https://github.com/GLEIF-IT/did-webs-resolver/issues"

[project.scripts]
dws = "dws.app.cli.dws:main"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "mockito>=1.5.4",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
